Bug 1809505 - Fix ContainStyleScope::GetPrecedingElementInGenConList. r=jwatt

The binary search gives us the first node after the insertion point. We
want the preceding one, unless we're actually appending.

Deal with append explicitly like the other callers of BinarySearch.

Differential Revision: https://phabricator.services.mozilla.com/D238500