layout/base/ContainStyleScopeManager.cpp
@@ -22,9 +22,13 @@ nsGenConNode* ContainStyleScope::GetPrecedingElementInGenConList(
   auto IsAfter = [this](nsGenConNode* aNode) {
     return nsContentUtils::CompareTreePosition<TreeKind::Flat>(
                mContent, aNode->mPseudoFrame->GetContent(),
-               /* aCommonAncestor = */ nullptr) > 0;
+               /* aCommonAncestor = */ nullptr) >= 0;
   };
-  return aList->BinarySearch(IsAfter);
+  auto* last = aList->GetLast();
+  if (!last || IsAfter(last)) {
+    return last;
+  }
+  return aList->BinarySearch(IsAfter)->getPrevious();
 }
 
 void ContainStyleScope::RecalcAllCounters() {
